# spicy-engine

./: .gitignore  CMakeLists.txt  Checklist.md  README.md  TDD.md
docs/: ABOUT.md
docs/explanations/: maths.md
docs/references/: ABOUT.md  maths.md
spicy-engine/header/maths/: math.hpp  vector_2.hpp  vector_3.hpp  vector_4.hpp
spicy-engine/header/tests/: vector_2_test.hpp
spicy-engine/source/: main.cpp  testing.cpp
spicy-engine/source/maths/: vector_2.cpp  vector_3.cpp  vector_4.cpp
spicy-engine/source/tests/: vector_2_test.cpp  vector_3_test.cpp  vector_4_test.cpp
